--- a/A64_43.html
+++ b/A64_43.html
@@ -68,6 +68,41 @@
                <div class="offcanvas-body"></div>
             </div>
             <div class="offcanvas offcanvas-end" tabindex="0" id="offcanvasOptions" aria-labelledby="offcanvasOptionsLabel" data-bs-scroll="true" data-bs-backdrop="false"></div>
+            <div id="editor-widget">
+               <div  id="aot-navBarNavDropdown" class="navBarNavDropdown dropstart"><a title="Annotationen" href="#" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" role="button"><i class="bi bi-gear" title="Menü zur Anpassung der Anzeige"></i></a><ul class="dropdown-menu">
+                     <li class="dropdown-item">
+                        <full-size opt="fls"></full-size>
+                     </li>
+                     <li class="dropdown-item">
+                        <image-switch opt="es"></image-switch>
+                     </li>
+                     <li class="dropdown-item">
+                        <font-size opt="fs"></font-size>
+                     </li>
+                     <li class="dropdown-item">
+                        <font-family opt="ff"></font-family>
+                     </li>
+                     <li class="dropdown-item" style="border-top: 5px dashed lightgrey !important;">
+                        <annotation-slider opt="txt"></annotation-slider>
+                     </li>
+                     <li class="dropdown-item">
+                        <annotation-slider opt="not"></annotation-slider>
+                     </li>
+                     <li class="dropdown-item">
+                        <annotation-slider opt="rub"></annotation-slider>
+                     </li>
+                     <li class="dropdown-item">
+                        <annotation-slider opt="rub2"></annotation-slider>
+                     </li>
+                     <li class="dropdown-item">
+                        <annotation-slider opt="rub"></annotation-slider>
+                     </li>
+                     <li class="dropdown-item">
+                        <annotation-slider opt="ini"></annotation-slider>
+                     </li>
+                  </ul>
+               </div>
+            </div>
             <div class="wp-transcript">
                <div class="row" id="edition_metadata">
                   <div class="col-md-2 col-lg-2 col-sm-12">
@@ -553,7 +588,7 @@
                               </span><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/A64_43/files/images/A-Gf_A64_43-423v/full/full/0/default.jpg" n="457" style="--page_before: '456'; --beginning_page: '457';"></span><span class="pb_marker" n="457"></span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -575,7 +610,7 @@
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
@@ -592,7 +627,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -611,7 +646,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -624,7 +659,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -637,7 +672,7 @@
                               </span><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/A64_43/files/images/A-Gf_A64_43-435v/full/full/0/default.jpg" n="463" style="--page_before: '462'; --beginning_page: '463';"></span><span class="pb_marker" n="463"></span><span class="">
                               </span><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/A64_43/files/images/A-Gf_A64_43-437v/full/full/0/default.jpg" n="464" style="--page_before: '463'; --beginning_page: '464';"></span><span class="pb_marker" n="464"></span><span class="">
                               </span><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/A64_43/files/images/A-Gf_A64_43-439v/full/full/0/default.jpg" n="465" style="--page_before: '464'; --beginning_page: '465';"></span><span class="pb_marker" n="465"></span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -677,7 +712,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -715,7 +750,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -724,7 +759,7 @@
                               </span><br/><span class="strophen">
                               </span><span class="">
                               </span><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/A64_43/files/images/A-Gf_A64_43-453v/full/full/0/default.jpg" n="472" style="--page_before: '471'; --beginning_page: '472';"></span><span class="pb_marker" n="472"></span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -737,7 +772,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -755,7 +790,7 @@
                               </span><span class="">
                               </span><br/><span class="">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -772,7 +807,7 @@
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
@@ -790,7 +825,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -805,7 +840,7 @@
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
-                              </span><br/><span class="initiale_cadelle">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
@@ -816,7 +851,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -840,7 +875,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -857,7 +892,7 @@
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="strophen">
                               </span><span class="">
@@ -868,7 +903,7 @@
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="strophen">
                               </span><span class="">
@@ -877,7 +912,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -895,7 +930,7 @@
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -950,5 +985,5 @@
             </div>
          </div>
       </footer>
-      <div  class="footer-imprint-bar hide-reading" id="wrapper-footer-secondary" style="text-align:center; padding:0.4rem 0; font-size: 0.9rem;"> © Copyright OEAW | <a href="imprint.html">Impressum</a></div><script  src="https://cdn.jsdelivr.net/npm/typesense-instantsearch-adapter@2/dist/typesense-instantsearch-adapter.min.js"></script><script  src="https://cdn.jsdelivr.net/npm/algoliasearch@4.5.1/dist/algoliasearch-lite.umd.js" integrity="sha256-EXPXz4W6pQgfYY3yTpnDa3OH8/EPn16ciVsPQ/ypsjk=" crossorigin="anonymous"></script><script  src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.8.3/dist/instantsearch.production.min.js" integrity="sha256-LAGhRRdtVoD6RLo2qDQsU2mp+XVSciKRC8XPOBWmofM=" crossorigin="anonymous"></script><script  src="js/listStopProp.js"></script><script  src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script><script  src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script><script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script><script  src="js/i18n.js"></script><script src="https://unpkg.com/de-micro-editor@0.3.2/dist/de-editor.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/4.1.0/openseadragon.min.js"></script><script type="text/javascript" src="js/osd_scroll.js"></script><script src="https://unpkg.com/de-micro-editor@0.3.4/dist/de-editor.min.js"></script><script type="text/javascript" src="js/run.js"></script><script type="text/javascript" src="js/offcanvastoggler.js"></script></body>
+      <div  class="footer-imprint-bar hide-reading" id="wrapper-footer-secondary" style="text-align:center; padding:0.4rem 0; font-size: 0.9rem;"> © Copyright OEAW | <a href="imprint.html">Impressum</a></div><script  src="https://cdn.jsdelivr.net/npm/typesense-instantsearch-adapter@2/dist/typesense-instantsearch-adapter.min.js"></script><script  src="https://cdn.jsdelivr.net/npm/algoliasearch@4.5.1/dist/algoliasearch-lite.umd.js" integrity="sha256-EXPXz4W6pQgfYY3yTpnDa3OH8/EPn16ciVsPQ/ypsjk=" crossorigin="anonymous"></script><script  src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.8.3/dist/instantsearch.production.min.js" integrity="sha256-LAGhRRdtVoD6RLo2qDQsU2mp+XVSciKRC8XPOBWmofM=" crossorigin="anonymous"></script><script  src="js/listStopProp.js"></script><script  src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script><script  src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script><script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script><script  src="js/i18n.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/4.1.0/openseadragon.min.js"></script><script type="text/javascript" src="js/osd_scroll.js"></script><script src="https://unpkg.com/de-micro-editor@0.3.4/dist/de-editor.min.js"></script><script type="text/javascript" src="js/run.js"></script><script type="text/javascript" src="js/offcanvastoggler.js"></script></body>
 </html>
