--- a/A67_22.html
+++ b/A67_22.html
@@ -68,6 +68,41 @@
                <div class="offcanvas-body"></div>
             </div>
             <div class="offcanvas offcanvas-end" tabindex="0" id="offcanvasOptions" aria-labelledby="offcanvasOptionsLabel" data-bs-scroll="true" data-bs-backdrop="false"></div>
+            <div id="editor-widget">
+               <div  id="aot-navBarNavDropdown" class="navBarNavDropdown dropstart"><a title="Annotationen" href="#" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" role="button"><i class="bi bi-gear" title="Menü zur Anpassung der Anzeige"></i></a><ul class="dropdown-menu">
+                     <li class="dropdown-item">
+                        <full-size opt="fls"></full-size>
+                     </li>
+                     <li class="dropdown-item">
+                        <image-switch opt="es"></image-switch>
+                     </li>
+                     <li class="dropdown-item">
+                        <font-size opt="fs"></font-size>
+                     </li>
+                     <li class="dropdown-item">
+                        <font-family opt="ff"></font-family>
+                     </li>
+                     <li class="dropdown-item" style="border-top: 5px dashed lightgrey !important;">
+                        <annotation-slider opt="txt"></annotation-slider>
+                     </li>
+                     <li class="dropdown-item">
+                        <annotation-slider opt="not"></annotation-slider>
+                     </li>
+                     <li class="dropdown-item">
+                        <annotation-slider opt="rub"></annotation-slider>
+                     </li>
+                     <li class="dropdown-item">
+                        <annotation-slider opt="rub2"></annotation-slider>
+                     </li>
+                     <li class="dropdown-item">
+                        <annotation-slider opt="rub"></annotation-slider>
+                     </li>
+                     <li class="dropdown-item">
+                        <annotation-slider opt="ini"></annotation-slider>
+                     </li>
+                  </ul>
+               </div>
+            </div>
             <div class="wp-transcript">
                <div class="row" id="edition_metadata">
                   <div class="col-md-2 col-lg-2 col-sm-12">
@@ -95,7 +130,7 @@
                      <div id="section">
                         <div class="card-body non_mimetic_lbs"><span class="">
                               </span><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/A67_22/files/images/A-Gf_A67_22-001r/full/full/0/default.jpg" n="1" style="--page_before: '0'; --beginning_page: '1';"></span><span class="pb_marker" n="1"></span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
@@ -117,10 +152,10 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/A67_22/files/images/A-Gf_A67_22-001v/full/full/0/default.jpg" n="2" style="--page_before: '1'; --beginning_page: '2';"></span><span class="pb_marker" n="2"></span><span class="">
-                              </span><br/><span class="initiale_cadelle">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -134,7 +169,7 @@
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -190,7 +225,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -207,7 +242,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_cadelle">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -228,7 +263,7 @@
                               </span><br/><span class="rubrik">
                               </span><span class="">
                               </span><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/A67_22/files/images/A-Gf_A67_22-003v/full/full/0/default.jpg" n="6" style="--page_before: '5'; --beginning_page: '6';"></span><span class="pb_marker" n="6"></span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -261,7 +296,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_cadelle">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -285,7 +320,7 @@
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -296,7 +331,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_cadelle">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -316,7 +351,7 @@
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -326,7 +361,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_cadelle">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -355,7 +390,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -405,7 +440,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -426,7 +461,7 @@
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
@@ -461,7 +496,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_cadelle">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -475,7 +510,7 @@
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -488,7 +523,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_cadelle">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -506,7 +541,7 @@
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -521,7 +556,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_cadelle">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -549,7 +584,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -578,7 +613,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -616,7 +651,7 @@
                               </span><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/A67_22/files/images/A-Gf_A67_22-009v/full/full/0/default.jpg" n="18" style="--page_before: '17'; --beginning_page: '18';"></span><span class="pb_marker" n="18"></span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
@@ -655,7 +690,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_cadelle">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
@@ -678,7 +713,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_cadelle">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -995,5 +1030,5 @@
             </div>
          </div>
       </footer>
-      <div  class="footer-imprint-bar hide-reading" id="wrapper-footer-secondary" style="text-align:center; padding:0.4rem 0; font-size: 0.9rem;"> © Copyright OEAW | <a href="imprint.html">Impressum</a></div><script  src="https://cdn.jsdelivr.net/npm/typesense-instantsearch-adapter@2/dist/typesense-instantsearch-adapter.min.js"></script><script  src="https://cdn.jsdelivr.net/npm/algoliasearch@4.5.1/dist/algoliasearch-lite.umd.js" integrity="sha256-EXPXz4W6pQgfYY3yTpnDa3OH8/EPn16ciVsPQ/ypsjk=" crossorigin="anonymous"></script><script  src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.8.3/dist/instantsearch.production.min.js" integrity="sha256-LAGhRRdtVoD6RLo2qDQsU2mp+XVSciKRC8XPOBWmofM=" crossorigin="anonymous"></script><script  src="js/listStopProp.js"></script><script  src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script><script  src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script><script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script><script  src="js/i18n.js"></script><script src="https://unpkg.com/de-micro-editor@0.3.2/dist/de-editor.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/4.1.0/openseadragon.min.js"></script><script type="text/javascript" src="js/osd_scroll.js"></script><script src="https://unpkg.com/de-micro-editor@0.3.4/dist/de-editor.min.js"></script><script type="text/javascript" src="js/run.js"></script><script type="text/javascript" src="js/offcanvastoggler.js"></script></body>
+      <div  class="footer-imprint-bar hide-reading" id="wrapper-footer-secondary" style="text-align:center; padding:0.4rem 0; font-size: 0.9rem;"> © Copyright OEAW | <a href="imprint.html">Impressum</a></div><script  src="https://cdn.jsdelivr.net/npm/typesense-instantsearch-adapter@2/dist/typesense-instantsearch-adapter.min.js"></script><script  src="https://cdn.jsdelivr.net/npm/algoliasearch@4.5.1/dist/algoliasearch-lite.umd.js" integrity="sha256-EXPXz4W6pQgfYY3yTpnDa3OH8/EPn16ciVsPQ/ypsjk=" crossorigin="anonymous"></script><script  src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.8.3/dist/instantsearch.production.min.js" integrity="sha256-LAGhRRdtVoD6RLo2qDQsU2mp+XVSciKRC8XPOBWmofM=" crossorigin="anonymous"></script><script  src="js/listStopProp.js"></script><script  src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script><script  src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script><script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script><script  src="js/i18n.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/4.1.0/openseadragon.min.js"></script><script type="text/javascript" src="js/osd_scroll.js"></script><script src="https://unpkg.com/de-micro-editor@0.3.4/dist/de-editor.min.js"></script><script type="text/javascript" src="js/run.js"></script><script type="text/javascript" src="js/offcanvastoggler.js"></script></body>
 </html>
