--- a/A67_23.html
+++ b/A67_23.html
@@ -68,6 +68,41 @@
                <div class="offcanvas-body"></div>
             </div>
             <div class="offcanvas offcanvas-end" tabindex="0" id="offcanvasOptions" aria-labelledby="offcanvasOptionsLabel" data-bs-scroll="true" data-bs-backdrop="false"></div>
+            <div id="editor-widget">
+               <div  id="aot-navBarNavDropdown" class="navBarNavDropdown dropstart"><a title="Annotationen" href="#" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false" role="button"><i class="bi bi-gear" title="Menü zur Anpassung der Anzeige"></i></a><ul class="dropdown-menu">
+                     <li class="dropdown-item">
+                        <full-size opt="fls"></full-size>
+                     </li>
+                     <li class="dropdown-item">
+                        <image-switch opt="es"></image-switch>
+                     </li>
+                     <li class="dropdown-item">
+                        <font-size opt="fs"></font-size>
+                     </li>
+                     <li class="dropdown-item">
+                        <font-family opt="ff"></font-family>
+                     </li>
+                     <li class="dropdown-item" style="border-top: 5px dashed lightgrey !important;">
+                        <annotation-slider opt="txt"></annotation-slider>
+                     </li>
+                     <li class="dropdown-item">
+                        <annotation-slider opt="not"></annotation-slider>
+                     </li>
+                     <li class="dropdown-item">
+                        <annotation-slider opt="rub"></annotation-slider>
+                     </li>
+                     <li class="dropdown-item">
+                        <annotation-slider opt="rub2"></annotation-slider>
+                     </li>
+                     <li class="dropdown-item">
+                        <annotation-slider opt="rub"></annotation-slider>
+                     </li>
+                     <li class="dropdown-item">
+                        <annotation-slider opt="ini"></annotation-slider>
+                     </li>
+                  </ul>
+               </div>
+            </div>
             <div class="wp-transcript">
                <div class="row" id="edition_metadata">
                   <div class="col-md-2 col-lg-2 col-sm-12">
@@ -99,7 +134,7 @@
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -225,14 +260,14 @@
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
-                              </span><br/><span class="initiale_historisch">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/A67_23/files/images/A-Gf_A67_23-003v/full/full/0/default.jpg" n="6" style="--page_before: '5'; --beginning_page: '6';"></span><span class="pb_marker" n="6"></span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -334,7 +369,7 @@
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -404,7 +439,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -443,7 +478,7 @@
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
-                              </span><br/><span class="initiale_historisch">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/A67_23/files/images/A-Gf_A67_23-07v/full/full/0/default.jpg" n="14" style="--page_before: '13'; --beginning_page: '14';"></span><span class="pb_marker" n="14"></span><span class="">
                               </span><br/><span class="notation">
@@ -452,7 +487,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -476,7 +511,7 @@
                               </span><span class="">
                               </span><br/><span class="rubrik">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -507,7 +542,7 @@
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -530,7 +565,7 @@
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -553,7 +588,7 @@
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
-                              </span><br/><span class="initiale_cadelle">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -575,7 +610,7 @@
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -598,7 +633,7 @@
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
-                              </span><br/><span class="initiale_cadelle">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -617,7 +652,7 @@
                               </span><br/><span class="text">
                               </span><span class="">
                               </span><span class="hline"><br/></span><span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/A67_23/files/images/A-Gf_A67_23-010r/full/full/0/default.jpg" n="19" style="--page_before: '18'; --beginning_page: '19';"></span><span class="pb_marker" n="19"></span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -635,7 +670,7 @@
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
-                              </span><br/><span class="initiale_cadelle">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -654,7 +689,7 @@
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
-                              </span><br/><span class="initiale_lombarde">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -672,7 +707,7 @@
                               </span><span class="">
                               </span><br/><span class="text">
                               </span><span class="">
-                              </span><br/><span class="initiale_cadelle">
+                              </span><br/><span class="initiale">
                               </span><span class="">
                               </span><br/><span class="notation">
                               </span><span class="">
@@ -736,5 +771,5 @@
             </div>
          </div>
       </footer>
-      <div  class="footer-imprint-bar hide-reading" id="wrapper-footer-secondary" style="text-align:center; padding:0.4rem 0; font-size: 0.9rem;"> © Copyright OEAW | <a href="imprint.html">Impressum</a></div><script  src="https://cdn.jsdelivr.net/npm/typesense-instantsearch-adapter@2/dist/typesense-instantsearch-adapter.min.js"></script><script  src="https://cdn.jsdelivr.net/npm/algoliasearch@4.5.1/dist/algoliasearch-lite.umd.js" integrity="sha256-EXPXz4W6pQgfYY3yTpnDa3OH8/EPn16ciVsPQ/ypsjk=" crossorigin="anonymous"></script><script  src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.8.3/dist/instantsearch.production.min.js" integrity="sha256-LAGhRRdtVoD6RLo2qDQsU2mp+XVSciKRC8XPOBWmofM=" crossorigin="anonymous"></script><script  src="js/listStopProp.js"></script><script  src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script><script  src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script><script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script><script  src="js/i18n.js"></script><script src="https://unpkg.com/de-micro-editor@0.3.2/dist/de-editor.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/4.1.0/openseadragon.min.js"></script><script type="text/javascript" src="js/osd_scroll.js"></script><script src="https://unpkg.com/de-micro-editor@0.3.4/dist/de-editor.min.js"></script><script type="text/javascript" src="js/run.js"></script><script type="text/javascript" src="js/offcanvastoggler.js"></script></body>
+      <div  class="footer-imprint-bar hide-reading" id="wrapper-footer-secondary" style="text-align:center; padding:0.4rem 0; font-size: 0.9rem;"> © Copyright OEAW | <a href="imprint.html">Impressum</a></div><script  src="https://cdn.jsdelivr.net/npm/typesense-instantsearch-adapter@2/dist/typesense-instantsearch-adapter.min.js"></script><script  src="https://cdn.jsdelivr.net/npm/algoliasearch@4.5.1/dist/algoliasearch-lite.umd.js" integrity="sha256-EXPXz4W6pQgfYY3yTpnDa3OH8/EPn16ciVsPQ/ypsjk=" crossorigin="anonymous"></script><script  src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.8.3/dist/instantsearch.production.min.js" integrity="sha256-LAGhRRdtVoD6RLo2qDQsU2mp+XVSciKRC8XPOBWmofM=" crossorigin="anonymous"></script><script  src="js/listStopProp.js"></script><script  src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script><script  src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script><script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script><script  src="js/i18n.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/4.1.0/openseadragon.min.js"></script><script type="text/javascript" src="js/osd_scroll.js"></script><script src="https://unpkg.com/de-micro-editor@0.3.4/dist/de-editor.min.js"></script><script type="text/javascript" src="js/run.js"></script><script type="text/javascript" src="js/offcanvastoggler.js"></script></body>
 </html>
